# fastapi

./: .gitignore  app.py  car.db  pyproject.toml
core/: database.py
migrations/: env.py
migrations/versions/: 10bba3f265b1_create_users_brands_cars.py  2fb7ca506706_create_users_table.py  3f9223278ff9_init.py  9e0aa40ead6a_create_users_table.py  d5cbb97fde7d_init.py
models/: __init__.py  cars.py  users.py
routers/: users.py
schemas/: users.py
